--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,21 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.4.1.jre11</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
     </dependencies>
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -56,8 +67,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-            <source>1.8</source> <!-- depending on your project -->
-            <target>1.8</target> <!-- depending on your project -->
+            <source>11</source> <!-- depending on your project -->
+            <target>11</target> <!-- depending on your project -->
             <annotationProcessorPaths>
                 <path>
                     <groupId>org.projectlombok</groupId>
@@ -67,7 +78,6 @@
             </annotationProcessorPaths>
         </configuration>
     </plugin>
-
 </plugins>
 </build>
 </project>
